--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "server testing",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server/app.js"
   },
   "author": "Nick Wernimont",
   "license": "ISC",
